# DeepGEMM_Ascend

./: .gitignore  build.sh  build_dga.sh  catlass_parameter.py  download.sh  get_best_config.py  model.py  padding_calculator.py  set_env.sh  tiling_calculator.py
aclnn_catlass_dynamic_matmul/: README_zh.md  build.sh  catlass_dynamic_matmul.json
aclnn_catlass_dynamic_matmul/op_host/: catlass_dynamic_matmul.cpp  catlass_dynamic_matmul_tiling.cpp  catlass_dynamic_matmul_tiling.h
aclnn_catlass_dynamic_matmul/op_host/op_tiling/: cache.cpp  cache.h  csv.cpp  csv.h  do_tiling.cpp  do_tiling.h  predictor.cpp  predictor.h  select_kernel.cpp  select_kernel.h  tiling_params.h  utils.cpp  utils.h
aclnn_catlass_dynamic_matmul/op_host/op_tiling/tools/: csv.cpp  csv.h
aclnn_catlass_dynamic_matmul/op_kernel/: catlass_dynamic_matmul.cpp  catlass_dynamic_matmul.h  catlass_dynamic_matmul_tiling_data.h  catlass_dynamic_matmul_tiling_key.h
aclnn_catlass_dynamic_matmul/op_kernel/kernel/: common_matmul_kernel.h  kernel_utils.h  padding_common_matmul_kernel.h  padding_streamk_matmul_kernel.h  small_matmul_kernel.h
aclnn_catlass_dynamic_matmul/tests/: README.md  csv_test.cpp  select_kernel_test.cpp  utils_test.cpp
aclnn_catlass_dynamic_matmul/tests/op_host/op_tiling/: CMakeLists.txt  cache_test.cpp  do_tiling_test.cpp  main_test.cpp  predictor_test.cpp
csrc/jit_kernels/impls/: sm90_fp8_gemm_1d2d.hpp
custom_catlass/: README_zh.md  build_custom_catlass.sh  changes.patch
custom_catlass/code_backup/: dynamic_tiling_matmul.cpp
deep_gem_ascend/scripts/tests/: README.md
deep_gemm_ascend/: dev.md  mmad_m_n.cpp
deep_gemm_ascend/benchmark_msprof/: CMakeLists.txt  benchmark_util.h  build.sh  main.cpp  mmad_jit.cpp
deep_gemm_ascend/cache/: CMakeLists.txt
deep_gemm_ascend/doc/: dev.md
deep_gemm_ascend/framework/: CMakeLists.txt
deep_gemm_ascend/framework/benchmark/: benchmark.py  benchmark.sh  benchmark_catlass.py  benchmark_output.jsonl  error_analysys.py  jsonl2excel.py  multi_start.sh  torch_matmul.py
deep_gemm_ascend/framework/benchmark/utils/: logger.py  msprof_executor.py  result_parse.py
deep_gemm_ascend/framework/benchmark_v2/: README.md  __init__.py  catlass_benchmark_cli.py  catlass_parameter.py  distributed_benchmark_runner.py  file_io.py  jsonl2excel.py  launch_benchmark_jobs.sh  models.py  padding_calculator.py
deep_gemm_ascend/framework/benchmark_v2/utils/: __init__.py  common.py  logger.py  msprof_executor.py  result_parse.py
deep_gemm_ascend/framework/csrc/: python_api.cpp
deep_gemm_ascend/framework/csrc/jit/: cache.hpp  compiler.hpp  generate_code.hpp  get_best_config.hpp  handle.hpp  kernel_runtime.hpp
deep_gemm_ascend/framework/csrc/jit_kernels/impls/: gemm.hpp  gemm_bench.hpp  get_best_config.cpp
deep_gemm_ascend/framework/csrc/utils/: constant.hpp  exception.hpp  format.hpp  system.hpp
deep_gemm_ascend/framework/deep_gemm_ascend/: __init__.py
deep_gemm_ascend/framework/deep_gemm_ascend/include/impls/: CMakeLists.txt  mmad.cpp  mmad_jit.cpp  mmad_m_n.cpp
deep_gemm_ascend/framework/tests/: bench_main.py  bench_sub.py  error_param.txt  test.py
deep_gemm_ascend/framework/trainer/: collect_results.py  compare_catlass.py  merge_excel.py  model_deployment.py  preprocess_data_V1.py  preprocess_data_V2.py  run.sh  trainer.py  utils.py
deep_gemm_ascend/framework/trainer/test/: GA.py  GA_V2.py  annealer_V2.py  test_om.py
deep_gemm_ascend/scripts/: gen_data.py  gen_golden.py  torch_matmul.py  verify.py  verify_result.py
deep_gemm_ascend/scripts/tests/: test_all_scripts.py
deep_gemm_ascend/sources/: mmad.cpp
get_best_config/: README.md  catlass_parameter.py  get_best_config.py  model.py  padding_calculator.py  tiling_calculator.py
get_best_config/utils/: __init__.py  common.py
test/: __init__.py
test/get_best_config/: __init__.py  conftest.py  run_tests.py  test_catlass_parameter.py  test_get_best_config.py  test_model.py  test_padding_calculator.py  test_tiling_calculator.py  test_utils_common.py
triton/: CMakeLists.txt  README.md  compiler.py  fwd.ttir  tiling.h  triton-adapter-explorer.py  triton-adapter-opt.cpp
triton/cfg/TritonAffinitoyOpt_V2/: CMakeLists.txt  CoreSyncAnalyzer.cpp  CoreSyncAnalyzer.h  CoreSyncPass.cpp  Passes.td  PipelineAnalyzer.cpp  PipelineAnalyzer.h  PipelinePass.cpp  PipelineTransformer.cpp  README.md  README_Pipeline.md  RefactorSummary.md  RefactorSummary_Pipeline.md  RegionSelector.cpp  TritonToGraph_Analysis.md
triton/cfg/TritonAffinitoyOpt_V2/kimi_version/: DAGSSBufferRefactored.cpp  DAGSSBufferRefactored.h  DAGScopeRefactored.cpp  DAGScopeRefactored.h  DAGSyncRefactored.cpp  DAGSyncRefactored.h  REFACTORING_SUMMARY.md
triton/cfg/TritonToCFG/: CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowGraphBuilder.cpp  DataflowGraph.h  MemorySSA.h  MemorySSAIntegration.cpp  MemorySsaBuilder.cpp  dataflow_graph.cpp  memory_ssa.cpp  memory_ssa_builder.cpp  tensor.cpp
triton/cfg/TritonToGraph/: AliasAnalysis.cpp  AliasAnalysis.h  CMakeLists.txt  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowGraphBuilder.cpp  ControlFlowGraphBuilder.h  DataflowGraph.cpp  DataflowGraph.h  GraphAnalysis.cpp  GraphAnalysis.h  InterProceduralCFG.cpp  InterProceduralCFG.h  MemorySSA.h  MemorySsaBuilder.cpp  MemorySsaBuilder.h  Passes.cpp  tensor.h
triton/cfg/include/: CMakeLists.txt  ControlFlowGraph.h  ControlFlowGraphBuilder.h  InterProceduralCFG.h  MemorySsaBuilder.h  Passes.h  Passes.td  alias_analysis.h  dataflow_graph.h  memory_ssa.h  memory_ssa_builder.h  tensor.h
triton/doc/: DAGSSBuffer分析报告.md  DAGSSBuffer深度分析.md  DAGScope分析.md  DAGSync分析.md  MEMORY_SSA_DESIGN.md  triton_graph_framework_design.md  triton_graph_kernel_case_study.md  triton_graph_scheduler_advanced.md
